--- a/tienda_1/pom.xml
+++ b/tienda_1/pom.xml
@@ -88,7 +88,12 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
-        </dependency>     
+        </dependency> 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>    
     </dependencies>
 
     <build>
