--- a/tienda_1/pom.xml
+++ b/tienda_1/pom.xml
@@ -97,7 +97,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>   
+        </dependency> 
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.20.5</version>
+        </dependency>  
     </dependencies>
 
     <build>
